2006-07-28  Peter Bienstman  <Peter.Bienstman@UGent.be>

	* defs.h: Remove obsolete compiler workaround.
	* defs.cpp: Ditto.

2006-07-28  Peter Bienstman  <Peter.Bienstman@UGent.be>

	* icache.cpp: Don't delete elements of a list while iterating over it.

2006-07-27  Peter Bienstman  <Peter.Bienstman@UGent.be>

	* camfr_wrap.cpp: Split in two.
	* camfr_wrap_2.cpp: New file.
	* camfr_wrap.h: New file.

2006-07-07  Peter Bienstman  <Peter.Bienstman@UGent.be>

	* camfr_wrap.cpp: Migrate to numpy.

2006-06-27  Peter Bienstman  <Peter.Bienstman@UGent.be>

	* stack.cpp: Speed up get_R12() and friends.

2006-06-27  Peter Bienstman  <Peter.Bienstman@UGent.be>

	* camfr_wrap.cpp: Add get_fourier_orders.

2006-04-25  Philippe Tassin <Philippe.Tassin@vub.ac.be>

	* materials.h: Add support for left handed materials.
	* materials.cpp: Ditto.
	* waveguide.h: Ditto.
	* camfr_wrap.cpp: Ditto.

2006-04-25  Peter Bienstman  <Peter.Bienstman@UGent.be>

	* defs.h: Add mueller precision.
	* defs.cpp: Same.
	* camfr_wrap.cpp: Same.

2006-02-24  Peter Bienstman  <Peter.Bienstman@UGent.be>

	* interface.cpp: Warn about incorrect assumptions.

2006-02-24  Peter Bienstman  <Peter.Bienstman@UGent.be>

	* defs.h: Add always dense.
	* defs.cpp: Same.
	* icache.h: Same.
	* icache.cpp: Same.

2006-02-23  Peter Bienstman  <Peter.Bienstman@UGent.be>

	* bloch.cpp: Speed up get_expansion_matrices considerably.

2006-02-23  Peter Bienstman  <Peter.Bienstman@UGent.be>

	* stack.cpp: Speed up fw_bw_field in special cases.

2006-02-17  Peter Bienstman  <Peter.Bienstman@UGent.be>

	* defs.h: Add sqrt_45.
	* defs.cpp: Ditto.

2005-11-29  Peter Debackere  <Peter.Debackere@UGent.be>

	* camfr_wrap.cpp: Add set_low_index_core, set_estimate_cutoff.
	* defs.h: Ditto.
	* defs.cpp: Ditto.

2005-09-28  Peter Bienstman  <Peter.Bienstman@UGent.be>

	* defs.h: Add set_calc_field_profiles.
	* defs.cpp: Ditto.
	* camfr_wrap.cpp: Ditto.

2005-09-15  Peter Bienstman  <Peter.Bienstman@UGent.be>
